--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     .side-panel { flex: 1; overflow-y: auto; padding: 20px; box-sizing: border-box; }
     .collapse-btn { background: #34495e; color: white; border: none; width: 100%; padding: 5px 0; cursor: pointer; font-size: 1rem; flex-shrink: 0; }
     .side-panel img { width: 100%; border-radius: 10px; margin-bottom: 15px; transition: all 0.3s; }
+    .side-panel h3, .side-panel p, .side-panel ul, .side-panel a { transition: all 0.3s; }
     .side-panel-wrapper.collapsed .side-panel * { display: none; }
     .main-content { flex: 1; padding: 15px; text-align: center; overflow-y: auto; height: 100vh; box-sizing: border-box; }
     .mode-toggle { margin: 15px 0; }
@@ -76,7 +77,7 @@
           <li>Practice tests & MCQs</li>
           <li>Expert doubt clearing</li>
         </ul>
-        <p>🌐 Visit: <a href="https://www.g10educationalplatformindia.co.in/" target="_blank">G10 Educational Platform</a></p>
+        <p>🌐 Visit: <a href="https://www.g10educationalplatformindia.co.in/" target="_blank">WEBSITE</a></p>
       </div>
     </div>
 
@@ -89,8 +90,10 @@
       </div>
 
       <div id="imageMode">
-        <label for="cameraInput" class="btn">📷 Take Photo</label>
-        <label for="galleryInput" class="btn">🖼️ Upload from Gallery</label>
+        <div class="flex gap-2">
+          <label for="cameraInput" class="btn">📷 Take Photo</label>
+          <label for="galleryInput" class="btn">🖼️ Upload from Gallery</label>
+        </div>
         <input type="file" id="cameraInput" accept="image/*" capture="environment" hidden />
         <input type="file" id="galleryInput" accept="image/*" hidden />
       </div>
@@ -100,8 +103,8 @@
         <button id="solveManual">🔍 Solve</button>
       </div>
 
-      <div id="codeMode" class="hidden">
-        <input type="text" id="questionCode" placeholder="Enter question code..." autocomplete="off" /><br />
+      <div id="codeMode" class="hidden" style="position: relative;">
+        <input type="text" id="questionCode" placeholder="Enter question code or part of question..." autocomplete="off" /><br />
         <div id="autocomplete-list"></div>
         <button id="solveCode">🔍 Get Answer</button>
       </div>
@@ -117,55 +120,166 @@
   </div>
 
   <script>
+    // ===== Side Panel Collapse =====
     const collapseBtn = document.getElementById("collapseBtn");
     const sidePanelWrapper = document.getElementById("sidePanelWrapper");
     collapseBtn.addEventListener("click", ()=>{ sidePanelWrapper.classList.toggle("collapsed"); collapseBtn.innerText = sidePanelWrapper.classList.contains("collapsed") ? "➡️" : "⬅️"; });
-    window.addEventListener("resize", ()=>{ if(window.innerWidth<768){ sidePanelWrapper.classList.add("collapsed"); collapseBtn.innerText="➡️"; } else { sidePanelWrapper.classList.remove("collapsed"); collapseBtn.innerText="⬅️"; } });
+    function handleResize(){ if(window.innerWidth<768){ sidePanelWrapper.classList.add("collapsed"); collapseBtn.innerText="➡️"; } else{ sidePanelWrapper.classList.remove("collapsed"); collapseBtn.innerText="⬅️"; } }
+    window.addEventListener("resize", handleResize); handleResize();
 
-    let cropper=null; const cropModal=document.getElementById("cropModal"); const cropImage=document.getElementById("cropImage"); const confirmCrop=document.getElementById("confirmCrop"); const cancelCrop=document.getElementById("cancelCrop"); const resultBox=document.getElementById("result");
-    const handleFile=(e)=>{ const file=e.target.files[0]; if(!file) return; cropImage.src=URL.createObjectURL(file); cropModal.style.display="flex"; cropImage.onload=()=>{ if(cropper) cropper.destroy(); cropper=new Cropper(cropImage,{ viewMode:1, autoCropArea:1 }); }; };
+    // ===== Image Upload & Mobile-Friendly OCR =====
+    let cropper=null;
+    const cropModal=document.getElementById("cropModal");
+    const cropImage=document.getElementById("cropImage");
+    const confirmCrop=document.getElementById("confirmCrop");
+    const cancelCrop=document.getElementById("cancelCrop");
+    const resultBox=document.getElementById("result");
+
+    const handleFile=(e)=>{
+      const file=e.target.files[0]; if(!file) return;
+      cropImage.src=URL.createObjectURL(file);
+      cropModal.style.display="flex";
+      cropImage.onload=()=>{
+        if(cropper) cropper.destroy();
+        cropper=new Cropper(cropImage,{ viewMode:1, autoCropArea:1, movable:true, zoomable:true, responsive:true });
+      };
+    };
     document.getElementById("cameraInput").addEventListener("change", handleFile);
     document.getElementById("galleryInput").addEventListener("change", handleFile);
+
     cancelCrop.onclick=()=>{ cropModal.style.display="none"; cropper?.destroy(); cropper=null; };
+
+    // ===== FAILURE COUNTER =====
+    let aiFailureCount = 0; // counts consecutive AI failures
+    const redirectWebsite = "https://www.g10educationalplatformindia.co.in/";
 
     confirmCrop.onclick=async()=>{
       if(!cropper) return;
       cropModal.style.display="none";
       const canvas=cropper.getCroppedCanvas({width:1500,height:1500});
+      const ctx=canvas.getContext("2d");
+      ctx.filter="contrast(150%) brightness(110%)"; // mobile-friendly enhancement
+      cropper.destroy(); cropper=null;
+      resultBox.innerHTML="⏳ Reading and solving question...";
       const blob=await new Promise(res=>canvas.toBlob(res,"image/png"));
       const { data } = await Tesseract.recognize(blob,"eng");
       const text=data.text.trim();
-      if(!text){ resultBox.innerHTML="⚠️ Image unclear."; return; }
+      if(!text || data.confidence<40){ 
+        aiFailureCount++;
+        resultBox.innerHTML="⚠️ Image unclear. Please retake a clearer photo for mobile streaming.";
+        if(aiFailureCount>=2){ window.open(redirectWebsite,"_blank"); aiFailureCount=0; }
+        return;
+      }
+      aiFailureCount=0; // reset on success
+      resultBox.innerHTML=`<b>Extracted Text:</b><br>${text.replace(/\n/g,"<br>")}<br><br>`;
       await searchSolution(text);
     };
 
+    function markdownToHTML(md){
+      const lines=md.split("\n"); let tableBlocks=[],table=[];
+      for(let line of lines){ if(line.trim().startsWith("|")) table.push(line); else { if(table.length>0){ tableBlocks.push(table.join("\n")); table=[]; } } }
+      if(table.length>0) tableBlocks.push(table.join("\n"));
+      tableBlocks.forEach(tbl=>{
+        const rows=tbl.trim().split("\n").filter(r=>r.includes("|"));
+        const htmlRows=rows.map((row,i)=>{
+          const cols=row.split("|").map(c=>c.trim()).filter(c=>c!=="");
+          if(i===0) return `<thead><tr>${cols.map(c=>`<th>${c}</th>`).join("")}</tr></thead>`;
+          if(i===1) return "";
+          return `<tr>${cols.map(c=>`<td>${c}</td>`).join("")}</tr>`;
+        }).join("");
+        md=md.replace(tbl,`<table>${htmlRows}</table>`);
+      });
+      return md;
+    }
+
+    // ===== AI Solution =====
     async function searchSolution(text){
-      const streamUrl="https://ai-question-and-its-solution-3oip.onrender.com/ask-ai";
       try{
-        const resp=await fetch(streamUrl,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({question:text})});
-        if(!resp.ok) throw new Error("Streaming failed");
+        const resp=await fetch("https://ai-question-and-its-solution-3oip.onrender.com/ask-ai",{ method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify({question:text}) });
+        if(!resp.ok) throw new Error("AI fetch failed");
         resultBox.innerHTML=`<b>G10EP AI Answer (streaming):</b><br><div id="streamOutput" style="white-space:pre-wrap;"></div>`;
         const streamDiv=document.getElementById("streamOutput");
         const reader=resp.body.getReader(); const decoder=new TextDecoder(); let full="";
         while(true){
-          const {done,value}=await reader.read();
-          if(done) break;
+          const {done,value}=await reader.read(); if(done) break;
           const chunk=decoder.decode(value,{stream:true}); full+=chunk;
-          streamDiv.innerHTML=full.replace(/\n/g,"<br>");
+          let processed=markdownToHTML(full).replace(/(Step\s*\d+[:.]?)/gi,'<b style="color:#007bff">$1</b>').replace(/^###\s*(.*)$/gm,'<h3>$1</h3>').replaceAll("**","").replaceAll("- ","<br>• ").replace(/\n{2,}/g,"<br><br>").replace(/\n/g,"<br>");
+          streamDiv.innerHTML=processed;
+          clearTimeout(window._mjTimer); window._mjTimer=setTimeout(()=>MathJax.typesetPromise([streamDiv]),200);
         }
-      }catch(err){
-        console.error("Streaming Error:",err);
-        window.open("https://www.g10educationalplatformindia.co.in/","_blank");
-        resultBox.innerHTML="⚠️ AI service temporarily unavailable. Redirecting...";
+        await MathJax.typesetPromise([streamDiv]);
+        aiFailureCount=0; // reset on success
+      }catch(e){
+        aiFailureCount++;
+        resultBox.innerHTML="❌ AI failed to solve the question.";
+        if(aiFailureCount>=2){ window.open(redirectWebsite,"_blank"); aiFailureCount=0; }
       }
     }
 
     document.getElementById("solveManual").onclick=async()=>{
       const text=document.getElementById("manualQuestion").value.trim();
       if(!text) return alert("Please enter a question.");
-      resultBox.innerHTML="⏳ Processing...";
+      resultBox.innerHTML="⏳ Searching...";
       await searchSolution(text);
     };
+
+    // ===== Question Code Mode =====
+    const subjectUrls={chemistry:"https://ai-question-and-its-solution-3oip.onrender.com/chemistry",physics:"https://ai-question-and-its-solution-3oip.onrender.com/physics",math:"https://ai-question-and-its-solution-3oip.onrender.com/biology"};
+    let questionBanks={}, fuseIndex={};
+    const codeInput=document.getElementById("questionCode");
+    const autoList=document.getElementById("autocomplete-list");
+
+    for(let subj in subjectUrls){
+      fuseIndex[subj]=new Fuse([], { keys: ["code","question.text"], threshold: 0.3 });
+      fetch(subjectUrls[subj]).then(r=>r.json()).then(data=>{ questionBanks[subj]=data; fuseIndex[subj]=new Fuse(data, { keys: ["code","question.text"], threshold: 0.3 }); }).catch(()=>{});
+    }
+
+    function renderQA(item, subj){
+      let html=`<b>Subject:</b> ${subj}<br>`; if(item.code) html+=`<p><b>Code:</b> <span class="small">${item.code}</span></p>`;
+      html+=`<p><b>Question:</b> <span class="mathjax">${item.question?.text||"❌ Question not found"}</span></p>`;
+      html+=`<p><b>Solution:</b> <span class="mathjax">${item.solution?.text||"❌ Solution not found"}</span></p>`;
+      if(item.solution_steps?.length){ html+=`<p><b>Solution Steps:</b></p><ul class="solution-step-list">`; item.solution_steps.forEach(step=>{ const stepHtml=step.replace(/(Step\s*\d+[:.]?)/gi,'<b style="color:#007bff">$1</b>').replace(/^###\s*(.*)$/gm,'<h3>$1</h3>'); html+=`<li><span class="mathjax">${stepHtml}</span></li>`; }); html+=`</ul>`; }
+      setTimeout(()=>{ MathJax.typesetPromise([document.getElementById("result")]); },60);
+      return html;
+    }
+
+    codeInput.addEventListener("input",()=>{
+      const val=codeInput.value.trim().toUpperCase();
+      autoList.innerHTML="";
+      if(!val) return;
+      for(let subj in fuseIndex){
+        const res=fuseIndex[subj].search(val);
+        res.slice(0,5).forEach(r=>{
+          const div=document.createElement("div");
+          const snippet=r.item.question?.text?.substring(0,50).replace(/\n/g," ") || "";
+          div.innerText=`[${subj}] ${r.item.code} — ${snippet}...`;
+          div.onclick=()=>{ codeInput.value=r.item.code; autoList.innerHTML=""; resultBox.innerHTML=renderQA(r.item, subj); };
+          autoList.appendChild(div);
+        });
+      }
+    });
+
+    document.addEventListener("click",e=>{ if(e.target!==codeInput) autoList.innerHTML=""; });
+
+    document.getElementById("solveCode").onclick=()=>{
+      const code=codeInput.value.trim().toUpperCase();
+      if(!code) return alert("Please enter a question code.");
+      resultBox.innerHTML="⏳ Searching question code...";
+      let found=false;
+      for(let subj in fuseIndex){
+        const res=fuseIndex[subj].search(code);
+        if(res.length>0){ resultBox.innerHTML=renderQA(res[0].item, subj); found=true; break; }
+      }
+      if(!found) resultBox.innerHTML="❌ No question found with this code.";
+    };
+
+    document.querySelectorAll('input[name="mode"]').forEach(r=>{
+      r.addEventListener("change", e=>{
+        document.getElementById("imageMode").classList.toggle("hidden", e.target.value!=="image");
+        document.getElementById("textMode").classList.toggle("hidden", e.target.value!=="text");
+        document.getElementById("codeMode").classList.toggle("hidden", e.target.value!=="code");
+      });
+    });
   </script>
 </body>
 </html>
