--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,14 @@
     #autocomplete-list div:hover { background-color: #e2e6ea; }
     @media (max-width: 768px) { .container { flex-direction: column; } .side-panel-wrapper { width: 100%; height: auto; position: relative; } .main-content { height: auto; } .solution-box::before { width: 200px; height: 200px; } }
     @media (max-width: 480px) { .solution-box::before { width: 140px; height: 140px; opacity: 0.12; } }
-    .side-panel a { color: red !important; text-decoration: underline; }
-    .side-panel a:hover { color: #ff4d4d !important; }
+ 
+  .side-panel a {
+  color: red !important;
+  text-decoration: underline;
+}
+.side-panel a:hover {
+  color: #ff4d4d !important; /* lighter red on hover */
+}
   </style>
 </head>
 
@@ -77,7 +83,7 @@
           <li>Practice tests & MCQs</li>
           <li>Expert doubt clearing</li>
         </ul>
-        <p>🌐 Visit: <a href="https://www.g10educationalplatformindia.co.in/" target="_blank">WEBSITE</a></p>
+        <p>🌐 Visit: <a href="https://al-question-solver-2.onrender.com" target="_blank">Q Solver-2</a></p>
       </div>
     </div>
 
@@ -149,10 +155,6 @@
 
     cancelCrop.onclick=()=>{ cropModal.style.display="none"; cropper?.destroy(); cropper=null; };
 
-    // ===== FAILURE COUNTER =====
-    let aiFailureCount = 0; // counts consecutive AI failures
-    const redirectWebsite = "https://www.g10educationalplatformindia.co.in/";
-
     confirmCrop.onclick=async()=>{
       if(!cropper) return;
       cropModal.style.display="none";
@@ -164,13 +166,10 @@
       const blob=await new Promise(res=>canvas.toBlob(res,"image/png"));
       const { data } = await Tesseract.recognize(blob,"eng");
       const text=data.text.trim();
-      if(!text || data.confidence<40){ 
-        aiFailureCount++;
+      if(!text || data.confidence<40){ // lowered threshold for mobile
         resultBox.innerHTML="⚠️ Image unclear. Please retake a clearer photo for mobile streaming.";
-        if(aiFailureCount>=2){ window.open(redirectWebsite,"_blank"); aiFailureCount=0; }
         return;
       }
-      aiFailureCount=0; // reset on success
       resultBox.innerHTML=`<b>Extracted Text:</b><br>${text.replace(/\n/g,"<br>")}<br><br>`;
       await searchSolution(text);
     };
@@ -194,26 +193,19 @@
 
     // ===== AI Solution =====
     async function searchSolution(text){
-      try{
-        const resp=await fetch("https://ai-question-and-its-solution-3oip.onrender.com/ask-ai",{ method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify({question:text}) });
-        if(!resp.ok) throw new Error("AI fetch failed");
-        resultBox.innerHTML=`<b>G10EP AI Answer (streaming):</b><br><div id="streamOutput" style="white-space:pre-wrap;"></div>`;
-        const streamDiv=document.getElementById("streamOutput");
-        const reader=resp.body.getReader(); const decoder=new TextDecoder(); let full="";
-        while(true){
-          const {done,value}=await reader.read(); if(done) break;
-          const chunk=decoder.decode(value,{stream:true}); full+=chunk;
-          let processed=markdownToHTML(full).replace(/(Step\s*\d+[:.]?)/gi,'<b style="color:#007bff">$1</b>').replace(/^###\s*(.*)$/gm,'<h3>$1</h3>').replaceAll("**","").replaceAll("- ","<br>• ").replace(/\n{2,}/g,"<br><br>").replace(/\n/g,"<br>");
-          streamDiv.innerHTML=processed;
-          clearTimeout(window._mjTimer); window._mjTimer=setTimeout(()=>MathJax.typesetPromise([streamDiv]),200);
-        }
-        await MathJax.typesetPromise([streamDiv]);
-        aiFailureCount=0; // reset on success
-      }catch(e){
-        aiFailureCount++;
-        resultBox.innerHTML="❌ AI failed to solve the question.";
-        if(aiFailureCount>=2){ window.open(redirectWebsite,"_blank"); aiFailureCount=0; }
+      const resp=await fetch("https://ai-question-and-its-solution-3oip.onrender.com/ask-ai",{ method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify({question:text}) });
+      if(!resp.ok){ resultBox.innerHTML="❌ Error fetching AI response."; return; }
+      resultBox.innerHTML=`<b>G10EP AI Answer (streaming):</b><br><div id="streamOutput" style="white-space:pre-wrap;"></div>`;
+      const streamDiv=document.getElementById("streamOutput");
+      const reader=resp.body.getReader(); const decoder=new TextDecoder(); let full="";
+      while(true){
+        const {done,value}=await reader.read(); if(done) break;
+        const chunk=decoder.decode(value,{stream:true}); full+=chunk;
+        let processed=markdownToHTML(full).replace(/(Step\s*\d+[:.]?)/gi,'<b style="color:#007bff">$1</b>').replace(/^###\s*(.*)$/gm,'<h3>$1</h3>').replaceAll("**","").replaceAll("- ","<br>• ").replace(/\n{2,}/g,"<br><br>").replace(/\n/g,"<br>");
+        streamDiv.innerHTML=processed;
+        clearTimeout(window._mjTimer); window._mjTimer=setTimeout(()=>MathJax.typesetPromise([streamDiv]),200);
       }
+      await MathJax.typesetPromise([streamDiv]);
     }
 
     document.getElementById("solveManual").onclick=async()=>{
@@ -224,7 +216,11 @@
     };
 
     // ===== Question Code Mode =====
-    const subjectUrls={chemistry:"https://ai-question-and-its-solution-3oip.onrender.com/chemistry",physics:"https://ai-question-and-its-solution-3oip.onrender.com/physics",math:"https://ai-question-and-its-solution-3oip.onrender.com/biology"};
+      chemistry:"https://ai-question-and-its-solution-3oip.onrender.com/chemistry",
+      physics:"https://ai-question-and-its-solution-3oip.onrender.com/physics",
+      math:"https://ai-question-and-its-solution-3oip.onrender.com/math",
+      biology:"https://ai-question-and-its-solution-3oip.onrender.com/biology"
+    };
     let questionBanks={}, fuseIndex={};
     const codeInput=document.getElementById("questionCode");
     const autoList=document.getElementById("autocomplete-list");
@@ -282,4 +278,4 @@
     });
   </script>
 </body>
-</html>
+</html> 
