--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
           <li>Practice tests & MCQs</li>
           <li>Expert doubt clearing</li>
         </ul>
-        <p>🌐 Visit: <a href="https://al-question-solver-2.onrender.com" target="_blank">Q Solver-2</a></p>
+        <p>🌐 Visit: <a href="https://www.g10educationalplatformindia.co.in/" target="_blank">WEBSITE</a></p>
       </div>
     </div>
 
@@ -216,11 +216,11 @@
     };
 
     // ===== Question Code Mode =====
-      chemistry:"https://ai-question-and-its-solution-3oip.onrender.com/chemistry",
-      physics:"https://ai-question-and-its-solution-3oip.onrender.com/physics",
-      math:"https://ai-question-and-its-solution-3oip.onrender.com/math",
-      biology:"https://ai-question-and-its-solution-3oip.onrender.com/biology"
-    };
+    const subjectUrls={
+	chemistry:"https://ai-question-and-its-solution-3oip.onrender.com/chemistry",
+	physics:"https://ai-question-and-its-solution-3oip.onrender.com/physics",
+	math:"https://ai-question-and-its-solution-3oip.onrender.com/math",
+	biology:"https://ai-question-and-its-solution-3oip.onrender.com/biology"};
     let questionBanks={}, fuseIndex={};
     const codeInput=document.getElementById("questionCode");
     const autoList=document.getElementById("autocomplete-list");
@@ -278,4 +278,4 @@
     });
   </script>
 </body>
-</html> 
+</html>
