--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
           <li>Practice tests & MCQs</li>
           <li>Expert doubt clearing</li>
         </ul>
-        <p>🌐 Visit: <a href="https://www.g10educationalplatformindia.co.in/" target="_blank">WEBSITE</a></p>
+        <p>🌐 Visit: <a href="https://al-question-solver-2.onrender.com" target="_blank">Q-Solver-2</a></p>
       </div>
     </div>
 
